@@ -1,6 +1,6 @@
 <CsoundSynthesizer>
 <CsOptions>
--RWfo CloudStrata.wav
+csound -RWfo CloudStrata.wav temp.orc temp.sco
 </CsOptions>
 <CsInstruments>
 sr = 96000
@@ -452,6 +452,7 @@ i  1.000000000 24.987800000 13.000000000 11.833333333 66.000000000 1.250000000 1
 i  1.000000000 18.061200000 13.000000000 11.250000000 66.000000000 -0.250000000 1.000000000
 i  1.000000000 0.030575500 13.000000000 12.000000000 66.000000000 1.250000000 1.000000000
 i  1.000000000 31.248400000 13.000000000 12.000000000 66.000000000 1.250000000 1.000000000
+
 
 
 </CsScore>
